<resources>
    <string name="app_name">Růženec</string>
    <string name="test_text">Nastavte velikost tak, aby se vám tento text dobře četl.</string>
    <string name="change_text_size_title">Změna velikosti textu</string>
    <string name="about_app_bar">O aplikaci</string>
    <string name="slovo_papeze_bar">Slovo papeže</string>
    <string name="dalsi_modlitby_bar">Další modlitby</string>
    <string name="po_so">pondělí a sobota</string>
    <string name="ut_pa">úterý a pátek</string>
    <string name="st_ne">středa a neděle</string>
    <string name="ct">čtvrtek</string>
    <string name="radost">RADOSTNÝ</string>
    <string name="bolest">BOLESTNÝ</string>
    <string name="slava">SLAVNÝ</string>
    <string name="svetlo">SVĚTLA</string>
    <string name="modlitby">Otče náš; desetkrát Zdrávas, Maria; Sláva Otci\n</string>
    <string name="title_activity_desatek">ActivityDesatek</string>
    <string name="zobrazit_skryt_text">zobrazit/schovat text</string>
    <string name="generuj_desatek">vytvořit desátek z tohoto tajemství</string>
    <string name="action_jak_se_modli_ruzenec">Jak se modlí růženec</string>
    <string name="action_slovo_papeze">Slovo papeže Jana Pavla II.</string>
    <string name="action_dalsi_modlitby">Další vhodné modlitby</string>
    <string name="action_o_aplikaci">O aplikaci</string>
    <string name="action_settings">Settings</string>
    <string name="action_change_text_size">Změnit velikost textu</string>
    <string name="action_na_uvod">Na úvod</string>
    <string name="action_jak_se_pouziva">Jak se aplikace používá</string>
    <string name="typ_textu">typ textu</string>
    <string name="toast_info_dalsi_desatek">Pro další tajemství táhnětě prstem doleva</string>
    <string name="arrow">
        <![CDATA[
        <h1>→</h1>
          ]]></string>
    <string name="slovo_papeze">
		        <![CDATA[
		<h3>Slovo papeže Jana Pavla II.</h3>
Svatý Jan Pavel II. ve svém apoštolském listu o modlitbě svatého růžence Rosarium Virginis Mariae (z
roku 2002) vybízel k znovuobjevení této modlitby. Modlit se růženec znamená přicházet do „školy“
Ježíšovy matky Marie, kde se pod jejím mateřským dohledem učíme číst vtělené Slovo věčného Otce, vnikat
do jeho tajemství a stále více se mu podobat. Jako ona nasloucháme Božímu Slovu, uchováváme ho v srdci a
přemýšlíme o něm. Ať se nám chvíle, v nichž společně s Marií kontemplujeme tvář jejího Syna, stanou
pramenem pokoje, radosti a posily na naší každodenní cestě za Kristem.
<br><br>
<i>
Kontemplace Ježíšova narození nás učí chápat posvátnost života. Pohled na dům v Nazaretě zjevuje prvotní
pravdu o rodině podle Božího plánu. Nasloucháním Mistrovým slovům v tajemstvích jeho veřejného života
nacházíme světlo ke vstupu do Božího království, a kráčíme-li s ním na Kalvárii, pochopíme smysl
spasitelného utrpení. A konečně, kontemplujeme-li Krista a jeho Matku ve slávě, spatříme cíl, k němuž jsme
všichni povoláni, jestliže se necháme uzdravit a proměnit Duchem Svatým.
<br><br>

Rozjímat s růžencem znamená složit své břemeno před milosrdné srdce Krista a jeho Matky. Když přemítám
nad zkouškami, které mě neminuly ani v mé službě Petrova nástupce, cítím potřebu opět zdůraznit, či spíše
obrátit se na všechny s vřelou výzvu, aby s růžencem učinili osobní zkušenost: ano, tato modlitba skutečně
„tepe v rytmu lidského života“, aby jej sladila s rytmem života božského, v radostném společenství
Nejsvětější Trojice – vytouženým cílem našeho bytí.
<br><br>

Milovaní bratři a sestry! Tak jednoduchá a zároveň tolik bohatá modlitba, jakou růženec je, si skutečně
zaslouží, aby byla znovuobjevena.
</i>
		        ]]>
	</string>
    <string name="dalsi_modlitby">
		<![CDATA[
<h3>Některé další vhodné modlitby</h3>
<b>Litanie loretánská</b><br>
Pane, smiluj se. <i>Pane, smiluj se.</i><br>
Kriste, smiluj se. <i>Kriste, smiluj se.</i><br>
Pane, smiluj se. <i>Pane, smiluj se.</i><br><br>

Bože, náš nebeský Otče, <i>smiluj se nad námi.</i><br>
Bože, Synu, Vykupiteli světa, <i>smiluj se nad námi.</i><br>
Bože, Duchu Svatý, <i>smiluj se nad námi.</i><br>
Bože v Trojici jediný, <i>smiluj se nad námi.</i><br><br>

Svatá Maria, <i>oroduj za nás.</i><br>
Svatá Boží Rodičko, <i>oroduj za nás.</i><br>
Svatá Panno panen, <i>oroduj za nás.</i><br>
Matko Kristova, <i>oroduj za nás.</i><br>
Matko církve, <i>oroduj za nás.</i><br>
Matko milosrdenství, <i>oroduj za nás.</i><br>
Matko božské milosti, <i>oroduj za nás.</i><br>
Matko naděje, <i>oroduj za nás.</i><br>
Matko nejčistší, <i>oroduj za nás.</i><br>
Matko nejcudnější, <i>oroduj za nás.</i><br>
Matko neporušená, <i>oroduj za nás.</i><br>
Matko neposkvrněná, <i>oroduj za nás.</i><br>
Matko láskyhodná, <i>oroduj za nás.</i><br>
Matko obdivuhodná, <i>oroduj za nás.</i><br>
Matko dobré rady, <i>oroduj za nás.</i><br>
Matko Stvořitelova, <i>oroduj za nás.</i><br>
Matko Spasitelova, <i>oroduj za nás.</i><br>
Panno nejmoudřejší, <i>oroduj za nás.</i><br>
Panno úctyhodná, <i>oroduj za nás.</i><br>
Panno chvályhodná, <i>oroduj za nás.</i><br>
Panno mocná, <i>oroduj za nás.</i><br>
Panno dobrotivá, <i>oroduj za nás.</i><br>
Panno věrná, <i>oroduj za nás.</i><br>
Zrcadlo spravedlnosti, <i>oroduj za nás.</i><br>
Trůne moudrosti, <i>oroduj za nás.</i><br>
Příčino naší radosti, <i>oroduj za nás.</i><br>
Stánku Ducha Svatého, <i>oroduj za nás.</i><br>
Stánku vyvolený, <i>oroduj za nás.</i><br>
Stánku zbožnosti, <i>oroduj za nás.</i><br>
Růže tajemná, <i>oroduj za nás.</i><br>
Věži Davidova, <i>oroduj za nás.</i><br>
Věži z kosti slonové, <i>oroduj za nás.</i><br>
Dome zlatý, <i>oroduj za nás.</i><br>
Archo úmluvy, <i>oroduj za nás.</i><br>
Bráno nebeská, <i>oroduj za nás.</i><br>
Hvězdo jitřní, <i>oroduj za nás.</i><br>
Uzdravení nemocných, <i>oroduj za nás.</i><br>
Útočiště hříšníků, <i>oroduj za nás.</i><br>
Útěcho migrantů, <i>oroduj za nás.</i><br>
Těšitelko zarmoucených, <i>oroduj za nás.</i><br>
Pomocnice křesťanů, <i>oroduj za nás.</i><br>
Královno andělů, <i>oroduj za nás.</i><br>
Královno patriarchů, <i>oroduj za nás.</i><br>
Královno proroků, <i>oroduj za nás.</i><br>
Královno apoštolů, <i>oroduj za nás.</i><br>
Královno mučedníků, <i>oroduj za nás.</i><br>
Královno vyznavačů, <i>oroduj za nás.</i><br>
Královno všech svatých, <i>oroduj za nás.</i><br>
Královno počatá bez poskvrny hříchu dědičného, <i>oroduj za nás.</i><br>
Královno nanebevzatá, <i>oroduj za nás.</i><br>
Královno posvátného růžence, <i>oroduj za nás.</i><br>
Královno rodin, <i>oroduj za nás.</i><br>
Královno míru. <i>oroduj za nás.</i><br><br>

Beránku Boží, který snímáš hříchy světa,<br>
<i>smiluj se nad námi.</i><br>
Beránku Boží, který snímáš hříchy světa,<br>
<i>smiluj se nad námi.</i><br>
Beránku Boží, který snímáš hříchy světa,<br>
<i>smiluj se nad námi.</i><br><br>

<b>K.</b> Oroduj za nás, svatá Boží Rodičko,<br>
<b>L.</b> <i>aby nám Kristus dal účast na svých zaslíbeních.</i><br><br>

<b>Pod ochranu tvou</b><br>
Pod ochranu tvou se utíkáme,
svatá Boží Rodičko.
Neodmítej naše prosby v našich potřebách,
ale ode všeho nebezpečí vysvoboď nás vždycky,
Panno slavná a požehnaná!
Paní naše,
prostřednice naše,
orodovnice naše,
u Syna nám smilování vypros,
Synu svému nás doporuč,
k Synu svému nás doprovoď.<br><br>

<b>Zdráva buď, Královno nebe</b><br>
Zdráva buď, Královno nebe,
zdrávas, andělé slaví tebe,
zdrávas, Máti, zdrávas, bráno,
z níž je světu světlo dáno.
Plesej, Panno oslavená,
nade všechny vyvolená,
zdráva buď, lilie čistá,
přimlouvej se za nás u Krista.<br><br>

<b>Pamatuj, láskyplná Panno Maria</b>
Pamatuj, láskyplná Panno Maria,
že od věků nebylo slýcháno,
abys opustila toho,
kdo se utíkal pod Tvou ochranu,
kdo vzýval Tvou moc,
kdo prosil o Tvou přímluvu.
V této důvěře se také já k Tobě utíkám,
Panno panen a Matko,
k Tobě přicházím, před Tebou stojím,
já kající hříšník.
Dobrá Matko Vtěleného Slova,
neodvracej se od mých slov,
ale slyš je a vyslyš.
Amen.
		]]>
	</string>
    <string name="dalsi_modlitby_litanie_nadpis">
		<![CDATA[
		    <b>Litanie loretánská</b>
		]]>
	</string>
    <string name="dalsi_modlitby_litanie">
		<![CDATA[
Pane, smiluj se. <i>Pane, smiluj se.</i><br>
Kriste, smiluj se. <i>Kriste, smiluj se.</i><br>
Pane, smiluj se. <i>Pane, smiluj se.</i><br><br>

Bože, náš nebeský Otče, <i>smiluj se nad námi.</i><br>
Bože, Synu, Vykupiteli světa, <i>smiluj se nad námi.</i><br>
Bože, Duchu Svatý, <i>smiluj se nad námi.</i><br>
Bože v Trojici jediný, <i>smiluj se nad námi.</i><br><br>

Svatá Maria, <i>oroduj za nás.</i><br>
Svatá Boží Rodičko, <i>oroduj za nás.</i><br>
Svatá Panno panen, <i>oroduj za nás.</i><br>
Matko Kristova, <i>oroduj za nás.</i><br>
Matko církve, <i>oroduj za nás.</i><br>
Matko milosrdenství, <i>oroduj za nás.</i><br>
Matko božské milosti, <i>oroduj za nás.</i><br>
Matko naděje, <i>oroduj za nás.</i><br>
Matko nejčistší, <i>oroduj za nás.</i><br>
Matko nejcudnější, <i>oroduj za nás.</i><br>
Matko neporušená, <i>oroduj za nás.</i><br>
Matko neposkvrněná, <i>oroduj za nás.</i><br>
Matko láskyhodná, <i>oroduj za nás.</i><br>
Matko obdivuhodná, <i>oroduj za nás.</i><br>
Matko dobré rady, <i>oroduj za nás.</i><br>
Matko Stvořitelova, <i>oroduj za nás.</i><br>
Matko Spasitelova, <i>oroduj za nás.</i><br>
Panno nejmoudřejší, <i>oroduj za nás.</i><br>
Panno úctyhodná, <i>oroduj za nás.</i><br>
Panno chvályhodná, <i>oroduj za nás.</i><br>
Panno mocná, <i>oroduj za nás.</i><br>
Panno dobrotivá, <i>oroduj za nás.</i><br>
Panno věrná, <i>oroduj za nás.</i><br>
Zrcadlo spravedlnosti, <i>oroduj za nás.</i><br>
Trůne moudrosti, <i>oroduj za nás.</i><br>
Příčino naší radosti, <i>oroduj za nás.</i><br>
Stánku Ducha Svatého, <i>oroduj za nás.</i><br>
Stánku vyvolený, <i>oroduj za nás.</i><br>
Stánku zbožnosti, <i>oroduj za nás.</i><br>
Růže tajemná, <i>oroduj za nás.</i><br>
Věži Davidova, <i>oroduj za nás.</i><br>
Věži z kosti slonové, <i>oroduj za nás.</i><br>
Dome zlatý, <i>oroduj za nás.</i><br>
Archo úmluvy, <i>oroduj za nás.</i><br>
Bráno nebeská, <i>oroduj za nás.</i><br>
Hvězdo jitřní, <i>oroduj za nás.</i><br>
Uzdravení nemocných, <i>oroduj za nás.</i><br>
Útočiště hříšníků, <i>oroduj za nás.</i><br>
Útěcho migrantů, <i>oroduj za nás.</i><br>
Těšitelko zarmoucených, <i>oroduj za nás.</i><br>
Pomocnice křesťanů, <i>oroduj za nás.</i><br>
Královno andělů, <i>oroduj za nás.</i><br>
Královno patriarchů, <i>oroduj za nás.</i><br>
Královno proroků, <i>oroduj za nás.</i><br>
Královno apoštolů, <i>oroduj za nás.</i><br>
Královno mučedníků, <i>oroduj za nás.</i><br>
Královno vyznavačů, <i>oroduj za nás.</i><br>
Královno všech svatých, <i>oroduj za nás.</i><br>
Královno počatá bez poskvrny hříchu dědičného, <i>oroduj za nás.</i><br>
Královno nanebevzatá, <i>oroduj za nás.</i><br>
Královno posvátného růžence, <i>oroduj za nás.</i><br>
Královno rodin, <i>oroduj za nás.</i><br>
Královno míru. <i>oroduj za nás.</i><br><br>

Beránku Boží, který snímáš hříchy světa,<br>
<i>smiluj se nad námi.</i><br>
Beránku Boží, který snímáš hříchy světa,<br>
<i>smiluj se nad námi.</i><br>
Beránku Boží, který snímáš hříchy světa,<br>
<i>smiluj se nad námi.</i><br><br>

<b>K.</b> Oroduj za nás, svatá Boží Rodičko,<br>
<b>L.</b> <i>aby nám Kristus dal účast na svých zaslíbeních.</i>
		]]>
	</string>
    <string name="dalsi_modlitby_pod_ochranu_nadpis">
		<![CDATA[
		    <b>Pod ochranu tvou</b>
		]]>
	</string>
    <string name="dalsi_modlitby_pod_ochranu">
		<![CDATA[
Pod ochranu tvou se utíkáme,
svatá Boží Rodičko.
Neodmítej naše prosby v našich potřebách,
ale ode všeho nebezpečí vysvoboď nás vždycky,
Panno slavná a požehnaná!
Paní naše,
prostřednice naše,
orodovnice naše,
u Syna nám smilování vypros,
Synu svému nás doporuč,
k Synu svému nás doprovoď.
		]]>
	</string>
    <string name="paulinky">O Dcerách sv. Pavla</string>
</resources>