<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constraint"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineActionBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="64dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHlavniPomer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="64dp" />


    <ImageView
        android:id="@+id/obrazekRuzence"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="0dp"
        android:layout_marginTop="146dp"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHlavniPomer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guidelineActionBar"
        app:srcCompat="@drawable/ruzenec" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewRadost"
        app:cardElevation="@dimen/card_elevation"
        app:cardCornerRadius="@dimen/radius"
        app:cardBackgroundColor="@color/radostBar"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:contentPadding="@dimen/card_view_padding"
        android:layout_marginBottom="@dimen/mensi_mezera_mezi_tlacitky"
        android:layout_marginEnd="@dimen/mensi_mezera_mezi_tlacitky"
        android:layout_marginStart="@dimen/vetsi_mezera_mezi_tlacitky"
        android:layout_marginTop="@dimen/vetsi_mezera_mezi_tlacitky"
        app:layout_constraintBottom_toTopOf="@+id/cardViewSlava"
        app:layout_constraintEnd_toStartOf="@+id/cardViewBolest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guidelineHlavniPomer"
        android:onClick="radost">

        <ImageView
            android:id="@+id/ivRadost"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.1"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/kometa" />

        <TextView
            android:id="@+id/tvRadostDen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/po_so" />

        <TextView
            android:id="@+id/tvRadost"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/radost"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>



    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewBolest"
        app:cardElevation="@dimen/card_elevation"
        app:cardCornerRadius="@dimen/radius"
        app:cardBackgroundColor="@color/bolestBar"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:contentPadding="@dimen/card_view_padding"
        android:layout_marginBottom="@dimen/mensi_mezera_mezi_tlacitky"
        android:layout_marginEnd="@dimen/vetsi_mezera_mezi_tlacitky"
        android:layout_marginStart="@dimen/mensi_mezera_mezi_tlacitky"
        android:layout_marginTop="@dimen/vetsi_mezera_mezi_tlacitky"
        app:layout_constraintBottom_toTopOf="@+id/cardViewSvetlo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardViewRadost"
        app:layout_constraintTop_toBottomOf="@+id/guidelineHlavniPomer"
        android:onClick="bolest">

        <ImageView
            android:id="@+id/ivBolest"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.1"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/trnova_koruna" />

        <TextView
            android:id="@+id/tvBolestDen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/ut_pa" />

        <TextView
            android:id="@+id/tvBolest"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/bolest"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

    </androidx.cardview.widget.CardView>



    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewSlava"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardElevation="@dimen/card_elevation"
        app:cardCornerRadius="@dimen/radius"
        app:cardBackgroundColor="@color/slavaBar"
        android:clickable="true"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:contentPadding="@dimen/card_view_padding"
        android:layout_marginBottom="@dimen/vetsi_mezera_mezi_tlacitky"
        android:layout_marginEnd="@dimen/mensi_mezera_mezi_tlacitky"
        android:layout_marginStart="@dimen/vetsi_mezera_mezi_tlacitky"
        android:layout_marginTop="@dimen/mensi_mezera_mezi_tlacitky"
        app:layout_constraintBottom_toTopOf="@+id/guidelineSpodniMezera"
        app:layout_constraintEnd_toStartOf="@+id/cardViewSvetlo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewRadost"
        android:onClick="slava">

        <ImageView
            android:id="@+id/ivSlava"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.1"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/victory" />

        <TextView
            android:id="@+id/tvSlavaDen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/st_ne" />

        <TextView
            android:id="@+id/tvSlava"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/slava"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewSvetlo"
        app:cardElevation="@dimen/card_elevation"
        app:cardCornerRadius="@dimen/radius"
        app:cardBackgroundColor="@color/svetloBar"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:contentPadding="@dimen/card_view_padding"
        android:layout_marginBottom="@dimen/vetsi_mezera_mezi_tlacitky"
        android:layout_marginEnd="@dimen/vetsi_mezera_mezi_tlacitky"
        android:layout_marginStart="@dimen/mensi_mezera_mezi_tlacitky"
        android:layout_marginTop="@dimen/mensi_mezera_mezi_tlacitky"
        app:layout_constraintBottom_toTopOf="@+id/guidelineSpodniMezera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardViewSlava"
        app:layout_constraintTop_toBottomOf="@+id/cardViewBolest"
        android:onClick="svetlo">

        <ImageView
            android:id="@+id/ivSvetlo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="1"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/svetlo2" />

        <TextView
            android:id="@+id/tvSvetloDen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/ct" />

        <TextView
            android:id="@+id/tvSvetlo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/svetlo"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineSpodniMezera"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_end="64dp"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>